--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,58 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* XZZZZZZZZZZZZZZZZZZZZZ */
+.half-circle-right {
+  width: 50px; 
+  height: 100px;
+  background-color: #031e31; 
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+
+  color: white;
+  font-size: 2rem;
+  padding-left: -20px;
+
+  margin-right: 10px;
+}
+
+.half-circle-left {
+  width: 50px; 
+  height: 100px;
+  background-color: #031e31; 
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
+
+  color: white;
+  font-size: 2rem;
+  padding-left: -20px;
+  margin-left: 10px;
+}
+
+
+
+hr{
+  width: 100px;
+}
+
+.yellow-spaced-header{
+  color:  #f5cd3e;
+  letter-spacing: 3px;
+  font-size: 1rem;
+}
+
+.spaced-bigger-header{
+  letter-spacing: 3px;
+  font-size: 1.7rem;
+}
+
+.centered{
+  text-align: center;
+}
+
+.lefted-hr {
+  margin-left: 0;
+}
+
+
