--- a/src/components/GetQuoteBlock/GetQuoteBlock.css
+++ b/src/components/GetQuoteBlock/GetQuoteBlock.css
@@ -1,9 +1,31 @@
+select {
+    -webkit-appearance: button;
+    -webkit-border-radius: 2px;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    -webkit-padding-end: 20px;
+    -webkit-padding-start: 2px;
+    -webkit-user-select: none;
+
+    background-position: center right;
+    background-repeat: no-repeat;
+    border: 1px solid #AAA;
+    color: #555;
+    font-size: inherit;
+    margin: 0;
+    overflow: hidden;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
 #get-quote-block{
 display: flex;
 justify-content: space-between;
 align-items: center;
 width: 75%;
-border: 1px solid black;
+box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 margin: auto;
 padding: 20px 30px 20px 30px;
 transform: translateY(-50%); /* Зміщує блок вгору на 50px */
@@ -29,10 +51,11 @@ background-color: white;
     justify-content: end;
 }
 
-input, #dropdown {
+input, select {
     padding: 15px;
     background-color: rgb(228,228,228);
-    border: 0px solid black;
+    border:0px;
+    outline:0px;
     width: 23%;
     color: gray;
     font-weight: bold;
@@ -70,8 +93,5 @@ input, #dropdown {
         width: 100%;
 
     }
-
-
-    
 }
 
