--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -5,7 +5,7 @@
 #product-container{
     margin-top: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 20px;
     flex-wrap: wrap;
 }
