--- a/src/components/ServicesOverview/ServicesOverview.css
+++ b/src/components/ServicesOverview/ServicesOverview.css
@@ -5,6 +5,7 @@
 
 #service-card-container{
     margin-left: 40px;
+    justify-content: center;
     display: flex;
     gap: 40px;
     flex-wrap: wrap; 
@@ -38,21 +39,10 @@
     transform: rotate(-45deg);
 }
 
-
 .service-info-container{
     width: 50%;
     margin-left: 50px;
 }
-
-
-
-
-
-
-
-
-
-
 
 #service-card-slider{
     margin: auto;
